--- a/Setting.settings
+++ b/Setting.settings
@@ -20,5 +20,8 @@
     <Setting Name="isFirstOpen" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="isNotOpenBrowser" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
