--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="managedwifi" version="1.1.0" targetFramework="net461" />
+  <package id="SimpleWifi" version="1.0.0.0" targetFramework="net461" />
 </packages>
